# shell

./: CMakeLists.txt
src/compositor/: CMakeLists.txt  application.cpp  application.h  compositor.qrc
src/compositor/qml/: Compositor.qml  KeyBindings.qml  Output.qml  ShellSettings.qml  XWayland.qml
src/compositor/qml/components/: CloseButton.qml  HardwareLayerSurfaceItem.qml  HotCorner.qml  LayerSurfaceManager.js  LockScreen.qml  Notification.qml  Osd.qml
src/compositor/qml/desktop/: Desktop.qml  PresentEffect.js  PresentWindowsChrome.qml  Shell.qml
src/compositor/qml/error/: ErrorCompositor.qml
src/compositor/qml/screens/: SplashScreen.qml
src/compositor/qml/windows/: WaylandChrome.qml  WaylandPopupChrome.qml  XWaylandChrome.qml  (+2 more)
src/helper/: CMakeLists.txt  helper.qrc  main.cpp
src/helper/authenticator/: authenticator.cpp  authenticator.h  qmlauthenticator.cpp  qmlauthenticator.h
src/helper/qml/: BackgroundWindow.qml  IndicatorsWindow.qml  KeyBindings.qml  LockScreenWindow.qml  ModalOverlayWindow.qml  PanelWindow.qml  main.qml
src/imports/session/: CMakeLists.txt  launcher.cpp  launcher.h  plugin.cpp  sessionmanager.cpp  sessionmanager.h
src/imports/shell-private/: CMakeLists.txt  plugin.cpp
src/imports/taskmanager/: CMakeLists.txt  application.cpp  application.h  applicationsmodel.cpp  applicationsmodel.h  appusage.cpp  appusage.h  categoriesmodel.cpp  categoriesmodel.h  frequentmodel.cpp  frequentmodel.h  pagemodel.cpp  pagemodel.h  plugin.cpp  qmldir  tasksmodel.cpp  tasksmodel.h  usagetracker.cpp  usagetracker.h  xdgutils.cpp  xdgutils.h
(+28 files in other folders)
